[tool.poetry]
name = "tester"
version = "0.1.0"
description = ""
authors = ["Oskar Korczak <oskar.korczak@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.142"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
black = "^23.3.0"
mypy = "^1.2.0"
isort = "^5.12.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
